# jupyter-vscode-web-proxy

./: README.md  pyproject.toml
jupyter_vscode_web_proxy/: __init__.py
