[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter_vscode_web_proxy"
version = "0.0.1"
authors = [
  { name="Edem Tiassou", email="workmail.edem@gmail.com" },
]
description = "Jupyter server proxy for Vscode Web"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
dependencies = [
    "jupyter-server-proxy",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]
keywords = [
    "Jupyter Proxy",
    "Jupyter Server Proxy",
    "JupyterLab",
]

[project.entry-points.jupyter_serverproxy_servers]
vscode-web= "jupyter_vscode_web_proxy:run_vscode_web"


[tool.hatch.build.targets.wheel]
packages = ["jupyter_vscode_web_proxy"]

[tool.hatch.build]
sources = ["jupyter_vscode_web_proxy"]
artifacts = [
  "*.svg",
]

[tool.hatch.build.targets.sdist]
artifacts = []
exclude = [".git",".github", "Makefile"]

[tool.hatch.build.targets.jupyter_vscode_web_proxy]